--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ nb = "0.1.1"
 riscv = "0.4.0"
 riscv-rt = "0.4.0"
 e310x = { version = "0.3.0", features = ["rt"] }
+void = { version = "1.0.2", default-features = false }
 
 [features]
 default = ["pll", "hfxosc", "lfaltclk"]
