--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,6 @@ e310x = { version = "0.3.0", features = ["rt"] }
 void = { version = "1.0.2", default-features = false }
 
 [features]
-default = ["pll", "hfxosc", "lfaltclk"]
+default = ["pll", "hfxosc"]
 pll = []
 hfxosc = []
-lfaltclk = []
