--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "e310x-hal"
-version = "0.9.3"
+version = "0.10.0-alpha.1"
 authors = ["David Craven <david@craven.ch>"]
 repository = "https://github.com/riscv-rust/e310x-hal"
 categories = ["embedded", "hardware-support", "no-std"]
@@ -10,10 +10,10 @@ license = "ISC"
 edition = "2018"
 
 [dependencies]
-embedded-hal = { version = "0.2.6", features = ["unproven"] }
+embedded-hal = "=1.0.0-alpha.7"
 nb = "1.0.0"
-riscv = "0.7.0"
-e310x = { version = "0.9.0", features = ["rt"] }
+riscv = "0.8.0"
+e310x = { version = "0.9.1", features = ["rt"] }
 
 [features]
 g002 = ["e310x/g002"]
