--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ edition = "2018"
 [dependencies]
 embedded-hal = "=1.0.0-alpha.7"
 nb = "1.0.0"
-riscv = "0.8.0"
+riscv = "0.9.0-alpha.1"
 e310x = { version = "0.9.1", features = ["rt"] }
 
 [features]
